@@ -1,3 +1,9 @@
+2010-01-06  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* libtiff/tif_dir.c: Ensure tile and scanline sizes are reset
+	when moving to new directories. 
+	http://bugzilla.maptools.org/show_bug.cgi?id=1936
+
 2009-12-03  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* libtiff/tif_jpeg.c: Fix a couple of issues that trigger failures in
